<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgotPasswordVM" type="com.tasktestingsapplication.app.modules.forgotpassword.data.viewmodel.ForgotPasswordVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearForgotPassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearGroup25"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginTop="@dimen/_57pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <ImageView android:id="@+id/imageGroup23"
                android:layout_gravity="start"
                android:layout_height="@dimen/_38pxh"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_width="@dimen/_38pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_group23" tools:ignore="ContentDescription"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtForgotPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_36pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{forgotPasswordVM.forgotPasswordModel.txtForgotPassword}"
                style="@style/txtInterbold32" tools:text="@string/msg_forgot_password"/>
            <TextView android:gravity="start"
                android:id="@+id/txtRecoverYouPas"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent"
                android:text="@{forgotPasswordVM.forgotPasswordModel.txtRecoverYouPas}"
                style="@style/txtInterregular16" tools:text="@string/msg_recover_you_pas"/>
            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_55pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{forgotPasswordVM.forgotPasswordModel.txtEmail}"
                style="@style/txtInterregular16" tools:text="@string/lbl_email"/>
            <EditText
                android:background="@drawable/rectangle_border_indigo_a200_radius_16"
                android:drawablePadding="@dimen/_10pxh"
                android:drawableStart="@drawable/img_vector"
                android:ellipsize="end"
                android:hint="@string/msg_ex_abc_example"
                android:id="@+id/etExAbcexample"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_22pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_22pxv"
                android:singleLine="true"
                android:text="@={forgotPasswordVM.forgotPasswordModel.etExAbcexampleValue}"
                android:textColorHint="@color/gray_400"
                style="@style/etRoundedOutline_1" tools:ignore="Autofill"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtSubmit"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:text="@{forgotPasswordVM.forgotPasswordModel.txtSubmit}"
                style="@style/txtSolidRounded" tools:text="@string/lbl_submit"/>
        </LinearLayout>
    </LinearLayout>
</layout>
