<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerVM" type="com.tasktestingsapplication.app.modules.register.data.viewmodel.RegisterVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearRegister"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearGroup16"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_172pxv"
            android:layout_marginTop="@dimen/_57pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <ImageView android:id="@+id/imageGroup23"
                android:layout_gravity="start"
                android:layout_height="@dimen/_38pxh"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_width="@dimen/_38pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_group23" tools:ignore="ContentDescription"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtRegister"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtRegister}"
                style="@style/txtInterbold32" tools:text="@string/lbl_register"/>
            <TextView android:gravity="start"
                android:id="@+id/txtCreateAnAccou"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent"
                android:text="@{registerVM.registerModel.txtCreateAnAccou}"
                style="@style/txtInterregular16" tools:text="@string/msg_create_an_accou"/>
            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtEmail}"
                style="@style/txtInterregular16" tools:text="@string/lbl_email"/>
            <EditText
                android:background="@drawable/rectangle_border_indigo_a200_radius_16"
                android:drawablePadding="@dimen/_10pxh"
                android:drawableStart="@drawable/img_vector"
                android:ellipsize="end"
                android:hint="@string/msg_ex_abc_example"
                android:id="@+id/etExAbcexample"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_22pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_22pxv"
                android:singleLine="true"
                android:text="@={registerVM.registerModel.etExAbcexampleValue}"
                android:textColorHint="@color/gray_400"
                style="@style/etRoundedOutline_1" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtYourName"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtYourName}"
                style="@style/txtInterregular16" tools:text="@string/lbl_your_name"/>
            <EditText
                android:background="@drawable/rectangle_border_indigo_a200_radius_16"
                android:drawablePadding="@dimen/_10pxh"
                android:drawableStart="@drawable/img_vector_1"
                android:ellipsize="end"
                android:hint="@string/msg_ex_saul_ramire"
                android:id="@+id/etExSaulRamire"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_23pxv"
                android:paddingStart="@dimen/_22pxh"
                android:paddingTop="@dimen/_22pxv"
                android:singleLine="true"
                android:text="@={registerVM.registerModel.etExSaulRamireValue}"
                android:textColorHint="@color/gray_400"
                style="@style/etRoundedOutline_1" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtYourPassword"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registerVM.registerModel.txtYourPassword}"
                style="@style/txtInterregular16" tools:text="@string/lbl_your_password"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearGroup13"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylecornerRadius">
                <ImageView android:id="@+id/imageGroup8"
                    android:layout_height="@dimen/_19pxh"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="@dimen/_16pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_group8" tools:ignore="ContentDescription"/>
                <ImageView android:id="@+id/imageGroup10"
                    android:layout_height="@dimen/_5pxh"
                    android:layout_marginBottom="@dimen/_25pxv"
                    android:layout_marginEnd="@dimen/_227pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_25pxv"
                    android:layout_width="@dimen/_61pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_group10" tools:ignore="ContentDescription"/>
            </LinearLayout>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtRegister1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_marginTop="@dimen/_58pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:text="@{registerVM.registerModel.txtRegister1}"
                style="@style/txtSolidRounded" tools:text="@string/lbl_register"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearGroup14"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAlreadyHaveAn"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{registerVM.registerModel.txtAlreadyHaveAn}"
                    style="@style/txtInterregular16" tools:text="@string/msg_already_have_an"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLogin"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_weight="0.2"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{registerVM.registerModel.txtLogin}"
                    style="@style/txtInterbold16_1" tools:text="@string/lbl_login"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
